--- a/views/show.ejs
+++ b/views/show.ejs
@@ -11,7 +11,9 @@
         
         <form >
             <h3>Report Information</h3>
-            <h5>File Url:</h5> <%= url %>
+            <h5>Filename:</h5> <%= filename %>
+            <br>
+            <image src="<%= url %>" ></image>
             <br>
             <h5>Filename:</h5> <%= filename %>
         </form>
