--- a/views/show.ejs
+++ b/views/show.ejs
@@ -11,14 +11,9 @@
         
         <form >
             <h3>Report Information</h3>
-            <h5>Filename:</h5> 
-            <p>
-                <%= filename %>
-            </p>
-            <br>
-            <h5>Patient Report</h5>
             <image src="<%= url %>" ></image>
             <br>
+            <h5>Filename:</h5> <%= filename %>
         </form>
     </div>
 </body>
