--- a/views/show.ejs
+++ b/views/show.ejs
@@ -11,9 +11,10 @@
         
         <form >
             <h3>Report Information</h3>
-            <image src="<%= url %>" ></image>
             <br>
             <h5>Filename:</h5> <%= filename %>
+            <br>
+            <h5>Image url: </h5> <%= url %>
         </form>
     </div>
 </body>
