--- a/views/show.ejs
+++ b/views/show.ejs
@@ -14,7 +14,8 @@
             <br>
             <h5>Filename:</h5> <%= filename %>
             <br>
-            <h5>Image url: </h5> <%= url %>
+            <h5>Image url: </h5> 
+            <image src="<%= url %>" ></image>
         </form>
     </div>
 </body>
