--- a/views/show.ejs
+++ b/views/show.ejs
@@ -11,11 +11,10 @@
         
         <form >
             <h3>Report Information</h3>
-            <br>
             <h5>Filename:</h5> <%= filename %>
             <br>
             <h5>Image url: </h5> 
-            <image src="<%= url %>" ></image>
+            <image src="<%= url %>" alt="image"></image>
         </form>
     </div>
 </body>
