--- a/views/register.ejs
+++ b/views/register.ejs
@@ -27,7 +27,7 @@
         <br/>
         <label for="email">Email:</label>
         <input
-            type="text"
+            type="email"
             name="email"
             placeholder="Enter your email"
             id="email"
