--- a/views/register.ejs
+++ b/views/register.ejs
@@ -16,6 +16,7 @@
             name="username" 
             placeholder="name" 
             id="username"
+            required
             >
         <br/>
         <label for="password">Password:</label>
@@ -23,6 +24,7 @@
             type="password" 
             name="password" 
             id="password" 
+            required
             >
         <br/>
         <label for="email">Email:</label>
@@ -31,6 +33,7 @@
             name="email"
             placeholder="Enter your email"
             id="email"
+            required
             >
         <br/>
         <label for="image">Upload Report:</label>
